@@ -2196,6 +2196,21 @@
                                   </packing>
                                 </child>
                                 <child>
+                                  <object class="GtkToolButton" id="toolbuttonPlayCopy">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="use_action_appearance">False</property>
+                                    <property name="label" translatable="yes">Copy</property>
+                                    <property name="use_underline">True</property>
+                                    <property name="stock_id">gtk-copy</property>
+                                    <signal name="clicked" handler="copy_playlist" swapped="no"/>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="homogeneous">True</property>
+                                  </packing>
+                                </child>
+                                <child>
                                   <object class="GtkToolButton" id="toolbuttonPlayCancel">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
