@@ -2,6 +2,9 @@ lyricue (1:3.4.0-1) precise; urgency=low
 
   * Change from glade to gtkbuilder for interface
   * Require GTK 2.24 (ubuntu maverick/natty no longer supported)
+  * Make playlist items be expanded by default when added to playlist or
+    opening a new playlist
+  * Add ability to copy a playlist
 
  -- Chris Debenham <chris@adebenham.com>  Fri, 2 Mar 2012 17:30:00 +1000
 
